# covid-simulation

./: README.md  stack.yaml
covid-simulation/: README.md  covid-simulation.cabal
covid-simulation/app/: Main.hs
covid-simulation/src/: Simulation.hs
