name:                covid-simulation
version:             0.1.0.0
synopsis:            Synopsis
description:         Covid simulation

homepage:            https://github.com/timfame/covid-simulation/tree/main/covid-simulation#readme
license:             MIT
license-file:        LICENSE
author:              Timofey Gribanov
maintainer:          timf4me@gmail.com
copyright:           2020 Timofey Gribanov

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Simulation
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
                     , deepseq
                     , random
                     , parallel
                     , stm
                     , vector
                     , hashable
                     , filepath
                     , directory
                     , microlens
                     , comonad
                     , ansi-terminal
                     , split
  default-language:    Haskell2010

executable covid-simulation
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , covid-simulation
  default-language:    Haskell2010

